--- a/styles/style.css
+++ b/styles/style.css
@@ -13,13 +13,13 @@ li{
     letter-spacing: 1px;
 }
 html {
-    background-color: #00539f;
+    background-color: #cad8d9;
   }
 
   body {
     width: 600px;
     margin: 0 auto;
-    background-color: #ff9500;
+    background-color: #ffffff;
     padding: 0 20px 20px 20px;
     border: 5px solid black;
   }
